--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@floating-ui/dom": "^1.6.5",
     "@google/generative-ai": "^0.10.0",
+    "axios": "^1.7.7",
     "element-plus": "^2.8.8",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
